--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.0.1",
+    "ethers": "^5.6.8",
+    "magic-sdk": "^8.1.1",
+    "moralis": "^1.8.0",
     "next": "latest",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-moralis": "^1.4.0",
+    "react-qr-code": "^2.0.7",
+    "react-toastify": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "hardhat": "^2.9.9",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
