--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.2.0",
+    "@solana/wallet-adapter-base": "^0.9.5",
+    "@solana/wallet-adapter-react": "^0.15.5",
+    "@solana/wallet-adapter-react-ui": "^0.9.7",
+    "@solana/wallet-adapter-wallets": "^0.16.1",
+    "@solana/web3.js": "^1.44.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3auth/web3auth": "^1.0.1",
+    "axios": "^0.27.2",
+    "bs58": "^5.0.0",
+    "buffer-layout": "^1.2.2",
     "ethers": "^5.6.8",
     "magic-sdk": "^8.1.1",
+    "moment": "^2.29.3",
     "moralis": "^1.8.0",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moralis": "^1.4.0",
     "react-qr-code": "^2.0.7",
-    "react-toastify": "^9.0.4"
+    "react-toastify": "^9.0.4",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
