--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-google-recaptcha-v3": "^1.10.0",
     "react-qr-code": "^2.0.7",
     "react-toastify": "^9.0.4",
     "socket.io-client": "^4.5.2",
